fix: update alt text for images in various component stories for better accessibility

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/divider/stories/divider.mdx
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/divider/stories/divider.mdx
@@ -71,22 +71,22 @@ import "../../../../../../../.storybook/template/style/police.css";
 → Ils n’incluent pas les “Behaviors” qui correspondent à comment le composant réagit.</p>
 
     <h3 id="orientation" className="h3" style={{fontFamily:"Nunito"}}> Orientation </h3>
-    <img src={DividerOrientation} alt="Illustration des différentes orientations du Divider" />
+    <img src={DividerOrientation} alt="Illustration des orientations possibles du séparateur (horizontal, vertical)" />
 
     <h3 id="thickness" className="h3" style={{fontFamily:"Nunito"}}> Thickness </h3>
-    <img src={DividerThickness} alt="Illustration des différentes épaisseurs du Divider" />
+    <img src={DividerThickness} alt="Exemples des épaisseurs disponibles pour le séparateur" />
 
     <h3 id="structure" className="h3" style={{fontFamily:"Nunito"}}> Structure </h3>
     <p> Le <b>Divider</b> est composé d'<b>un seul élément</b>, un stroke gris </p>
-    <img src={DividerStructure} alt="Illustration de la structure du Divider" />
+    <img src={DividerStructure} alt="Schéma de la structure du composant Divider" />
 
     <h3 id="table-of-options" className="h3" style={{fontFamily:"Nunito"}}> Table of Options </h3>
-    <img src={DividerTableOfOptions} alt="Table of options du Divider" />
+    <img src={DividerTableOfOptions} alt="Tableau des propriétés et options du Divider" />
 
     <h2 id="behaviors" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Behaviors </h2>
     
     <h3 id="autre-contextuel" className="h3" style={{fontFamily:"Nunito"}}> Autre / contextuel </h3>
-    <img src={DividerBehaviors} alt="Illustration des différents comportements du Divider" />
+    <img src={DividerBehaviors} alt="Exemples de comportements contextuels du séparateur" />
 
     </div>
 
@@ -95,7 +95,7 @@ import "../../../../../../../.storybook/template/style/police.css";
         <h2 id="accessibilityTestingOverview" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Accessibility Testing Overview </h2>
 
         <p> Voici les tests à effectuer pour vérifier l’accessibilité de chaque catégorie : </p>
-        <img src={DividerAccessibility} alt="Illustration des tests d'accessibilité du Divider" />
+    <img src={DividerAccessibility} alt="Checklist des tests d’accessibilité pour le Divider" />
 
 
 </div>
