--- a/packages/angular/projects/ds-rte-lib/src/lib/components/segmented-control/stories/segmented-control.mdx
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/segmented-control/stories/segmented-control.mdx
@@ -76,7 +76,7 @@ import "../../../../../../../.storybook/template/style/police.css";
     <p className="no-margin-bottom">Pré-sélectionner une valeur par défaut</p>
     <p className="light-gray no-margin-top">Aucune option vide : une valeur est toujours sélectionnée</p>
 
-    <img src={SegControlDoDont} alt="Do and Don't Segmented Control"/>
+    <img src={SegControlDoDont} alt="Bonnes et mauvaises pratiques pour le Segmented Control" />
 
     <h3 id="content-standards" className="h3" style={{fontFamily:"Nunito"}}> Content Standards</h3>
     <p>Quels sont les standards de contenu ? (UX Writing)</p>
@@ -92,26 +92,26 @@ import "../../../../../../../.storybook/template/style/police.css";
     → Ils n’incluent pas les “Behaviors” qui correspondent à comment le composant réagit.</p>
 
     <h3 id="interaction-states" className="h3" style={{fontFamily:"Nunito"}}> Interaction States (appliqué aux segments) </h3>
-    <img src={SegControlInteractionState} alt="Interaction States Segmented Control"/>
+    <img src={SegControlInteractionState} alt="États d’interaction des segments du Segmented Control" />
 
     <h3 id="content" className="h3" style={{fontFamily:"Nunito"}}> Content (appliqué aux segments) </h3>
-    <img src={SegControlContent} alt="Content Segmented Control"/>
+    <img src={SegControlContent} alt="Exemples de contenu dans les segments du Segmented Control" />
 
     <h3 id="boolean-options" className="h3" style={{fontFamily:"Nunito"}}> Boolean Options (appliqué aux segments) </h3>
-    <img src={SegControlBooleanOptions} alt="Boolean Options Segmented Control"/>
+    <img src={SegControlBooleanOptions} alt="Options booléennes pour les segments du Segmented Control" />
 
     <h3 id="text-options" className="h3" style={{fontFamily:"Nunito"}}> Text Options (appliqué aux segments) </h3>
-    <img src={SegControlTextOptions} alt="Text Options Segmented Control"/>
+    <img src={SegControlTextOptions} alt="Options de texte pour les segments du Segmented Control" />
 
     <h3 id="icon-options" className="h3" style={{fontFamily:"Nunito"}}> Icon Options (appliqué aux segments) </h3>
-    <img src={SegControlIconOptions} alt="Icon Options Segmented Control"/>
+    <img src={SegControlIconOptions} alt="Options d’icônes pour les segments du Segmented Control" />
 
     <h3 id="segments" className="h3" style={{fontFamily:"Nunito"}}> Segments </h3>
-    <img src={SegControlSegments} alt="Segments Segmented Control"/>
+    <img src={SegControlSegments} alt="Exemples de segments du Segmented Control" />
 
     <h3 id="structure" className="h3" style={{fontFamily:"Nunito"}}> Structure </h3>
     <p> Le <b>Segmented Control</b> est composé de plusieurs éléments : </p>
-    <img src={SegControlStructure} alt="Structure Segmented Control"/>
+    <img src={SegControlStructure} alt="Structure et éléments constitutifs du Segmented Control" />
     <ol>
         <li>Un <b>Container global bleu</b></li>
         <li>Une <b>Icône</b> (Selected : validation / Unselected : pas d’icône)</li>
@@ -125,33 +125,33 @@ import "../../../../../../../.storybook/template/style/police.css";
 
     <h3 id="table-of-options" className="h3" style={{fontFamily:"Nunito"}}> Table of Options </h3>
     <p className="light-gray"> Tous les éléments modifiables sont inscrit dans le tableau. On y renseigne le nom de la propriété et les choix qui s’offrent aux développeurs.</p>
-    <img src={SegControlTableOfOptions} alt="Table of Options Segmented Control"/>
+    <img src={SegControlTableOfOptions} alt="Tableau des options modifiables du Segmented Control" />
 
     <p className="light-gray"> Nested Properties : (Left Segment / Middle Segment / Right Segment)</p>
-    <img src={SegControlNestedProperties} alt="Nested Properties Segmented Control"/>
+    <img src={SegControlNestedProperties} alt="Propriétés imbriquées des segments du Segmented Control" />
 
     <h2 id="behaviors" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Behaviors </h2>
 
     <h3 id="focus" className="h3" style={{fontFamily:"Nunito"}}> Focus </h3>
-    <img src={SegControlFocus} alt="Focus Segmented Control"/>
+    <img src={SegControlFocus} alt="Illustration de l’état de focus du Segmented Control" />
 
     <h3 id="layout" className="h3" style={{fontFamily:"Nunito"}}> Layout </h3>
-    <img src={SegControlLayout} alt="Layout Segmented Control"/>
+    <img src={SegControlLayout} alt="Exemple de disposition du Segmented Control" />
 
     <h3 id="animations" className="h3" style={{fontFamily:"Nunito"}}> Animations </h3>
     <p> Toutes les animations doivent respecter les préférences utilisateur (prefers-reduced-motion) et <b>être désactivables si nécessaire.</b><br />
     Les transitions doivent <b>rester non-intrusives</b> et <b>ne jamais bloquer l'interaction ou la lisibilité.</b></p>
-    <img src={SegControlAnimations} alt="Animations Segmented Control"/>
+    <img src={SegControlAnimations} alt="Exemples d’animations pour le Segmented Control" />
 
     <h3 id="interactions" className="h3" style={{fontFamily:"Nunito"}}> Interactions </h3>
     <p>Clic souris</p>
     <p className="light-gray no-margin-top">Sélection d’une option. Le clic sur l'option déjà sélectionnée ne fait rien.</p>
 
     <h3 id="keyboard-interactions" className="h3" style={{fontFamily:"Nunito"}}> Keyboard Interactions </h3>
-    <img src={SegControlKeyboardInteractions} alt="Keyboard Interactions Segmented Control" />
+    <img src={SegControlKeyboardInteractions} alt="Interactions clavier possibles avec le Segmented Control" />
 
     <h3 id="autre-HTML-natif" className="h3" style={{fontFamily:"Nunito"}}> Autre / HTML Natif </h3>
-    <img src={SegControlAutreHTMLNatif} alt="Autre HTML Natif Segmented Control"/>
+    <img src={SegControlAutreHTMLNatif} alt="Comparaison avec d’autres éléments HTML natifs" />
 
 </div>
 
@@ -159,7 +159,7 @@ import "../../../../../../../.storybook/template/style/police.css";
 
     <h2 id="accessibility-testing-status" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Accessibilité </h2>
     <p>Voici les tests à effectuer pour vérifier l’accessibilité de chaque catégorie : </p>
-    <img src={SegControlAccessibility} alt="Accessibilité Segmented Control"/>
+    <img src={SegControlAccessibility} alt="Checklist des tests d’accessibilité pour le Segmented Control" />
 
 </div>
 
