--- a/packages/angular/projects/ds-rte-lib/src/lib/components/text-input/stories/text-input.mdx
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/text-input/stories/text-input.mdx
@@ -100,7 +100,7 @@ import "../../../../../../../.storybook/template/style/police.css";
             <li> <p className="light-gray">Si la plupart des champs sont obligatoires, seuls les champs facultatifs doivent être accompagnés de la mention ("facultatif"). Un astérisque ne doit jamais être utilisé pour indiquer qu’un champ est facultatif.</p></li>
         </ul>
 
-        <img src={TextInputDoDOnt} alt="TextInput Do's and Don'ts" />
+    <img src={TextInputDoDOnt} alt="Bonnes et mauvaises pratiques pour l’utilisation du champ de saisie" />
 
         <h3 id="content-standards" className="h3" style={{fontFamily:"Nunito"}}> Content Standards : </h3>
         <p>Quels sont les standards de contenu ? (UX Writing)</p>
@@ -117,28 +117,28 @@ import "../../../../../../../.storybook/template/style/police.css";
 
         <h3 id="position" className="h3" style={{fontFamily:"Nunito"}}> Position </h3>
         <p className="light-gray no-margin-top">Définit la direction principale d’ouverture par rapport à l’élément ciblé.</p>
-        <img src={TextInputPosition} alt="TextInput Position" />
+    <img src={TextInputPosition} alt="Positionnement du champ de saisie par rapport à l’élément ciblé" />
 
         <h3 id="taille" className="h3" style={{fontFamily:"Nunito"}}> Taille : </h3>
         <p> Le text input n'existe qu'en <b>une seule taille</b>, mais avec <b>deux variants</b>.<br />
         Le text input n’a <b>qu’une seule hauteur</b> (largeur variable) : <b>32 pixels de haut</b></p>
 
         <h3 id="label-position" className="h3" style={{fontFamily:"Nunito"}}> Label Position </h3>
-        <img src={TextInputLabelPosition} alt="TextInput Label Position" />
+    <img src={TextInputLabelPosition} alt="Positions possibles du label pour le champ de saisie" />
 
         <h3 id="required-indicator"  className="h3" style={{fontFamily:"Nunito"}}> Required Indicator : </h3>
         <p className="light-gray no-margin-top">Permet de choisir la façon d'indiquer que le champ est obligatoire.</p>
-        <img src={TextInputRequiredIndicator} alt="TextInput Required Indicator" />
+    <img src={TextInputRequiredIndicator} alt="Indicateurs pour signaler qu’un champ est obligatoire" />
 
         <h3 id="boolean-options" className="h3" style={{fontFamily:"Nunito"}}> Boolean Options </h3>
-        <img src={TextInputBooleanOptions} alt="TextInput Boolean Options" />
+    <img src={TextInputBooleanOptions} alt="Options booléennes disponibles pour le champ de saisie" />
 
         <h3 id="precisions" className="h3" style={{fontFamily:"Nunito"}}> Précisions : différence readOnly / disabled </h3>
-        <img src={TextInputPrecisions} alt="TextInput Précisions" />
+    <img src={TextInputPrecisions} alt="Différences entre les états readOnly et disabled du champ de saisie" />
 
         <h3 id="structure" className="h3" style={{fontFamily:"Nunito"}}> Structure </h3>
         <p> Le <b>text input</b> est composé de plusieurs éléments : </p>
-        <img src={TextInputStructure} alt="TextInput Structure" />
+    <img src={TextInputStructure} alt="Structure et éléments constitutifs du champ de saisie" />
         <ol>
             <li>Un <b>container</b></li>
             <li>Un <b>label + required</b> (optional)</li>
@@ -147,11 +147,11 @@ import "../../../../../../../.storybook/template/style/police.css";
         </ol>
 
         <h3 id="text-options" className="h3" style={{fontFamily:"Nunito"}}> Text Options </h3>
-        <img src={TextInputTextOptions} alt="TextInput Text Options" />
+    <img src={TextInputTextOptions} alt="Options de texte disponibles pour le champ de saisie" />
 
         <h3 id="table-of-options" className="h3" style={{fontFamily:"Nunito"}}> Table of Options </h3>
         <p className="light-gray no-margin-top">Tous les éléments modifiables sont inscrit dans le tableau. On y renseigne le nom de la propriété et les choix qui s’offrent aux développeurs.</p>
-        <img src={TextInputTableOfOptions} alt="TextInput Table of Options" />
+    <img src={TextInputTableOfOptions} alt="Tableau des options modifiables du champ de saisie" />
 
         <h2 id="Behaviors" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Behaviors </h2>
 
@@ -164,7 +164,7 @@ import "../../../../../../../.storybook/template/style/police.css";
         </ul>
 
         <h3 id="layout" className="h3" style={{fontFamily:"Nunito"}}> Layout </h3>
-        <img src={TextInputLayout} alt="TextInput Layout" />
+    <img src={TextInputLayout} alt="Exemple de disposition du champ de saisie" />
 
         <h3 id="animations" className="h3" style={{fontFamily:"Nunito"}}> Animations </h3>
         <p className="no-margin-bottom"><b>Erreur</b></p>
@@ -173,7 +173,7 @@ import "../../../../../../../.storybook/template/style/police.css";
         <p className="light-gray no-margin-top"><b>Modifiable</b> : Oui</p>
 
         <h3 id="keyboard-interactions" className="h3" style={{fontFamily:"Nunito"}}> Keyboard Interactions </h3>
-        <img src={TextInputKeyboardInteractions} alt="TextInput Keyboard Interactions" />
+    <img src={TextInputKeyboardInteractions} alt="Interactions clavier possibles avec le champ de saisie" />
 
         <h3 id="placement" className="h3" style={{fontFamily:"Nunito"}}> Placement </h3>
         <ul>
@@ -186,7 +186,7 @@ import "../../../../../../../.storybook/template/style/police.css";
 
     <h2 className="h2" id="accessibility-testing-status" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}}> Accessibility Testing Status </h2>
 <p> Voici les tests à effectuer pour vérifier l’accessibilité de chaque catégorie : </p>
-<img src={TextInputAccessibility} alt="Accessibility" />
+    <img src={TextInputAccessibility} alt="Checklist des tests d’accessibilité pour le champ de saisie" />
 
 </div>
 
