--- a/packages/angular/projects/ds-rte-lib/src/lib/components/textarea/stories/textarea.mdx
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/textarea/stories/textarea.mdx
@@ -105,7 +105,7 @@ import "../../../../../../../.storybook/template/style/police.css";
     <p className="no-margin-bottom">Limiter le nombre de caractères {}</p>
     <p className="light-gray no-margin-top">Utiliser un maxLength quand une limite est imposée, et afficher un compteur si utile.</p>
 
-    <img src={TextAreaDoDont} alt="Text Area Do's and Don't's" />
+    <img src={TextAreaDoDont} alt="Bonnes et mauvaises pratiques pour la zone de texte" />
 
     <h3 id="content-standards" className="h3" style={{fontFamily:"Nunito"}}> Content Standards </h3>
 
@@ -123,7 +123,7 @@ import "../../../../../../../.storybook/template/style/police.css";
 
     <h3 id="position-label" className="h3" style={{fontFamily:"Nunito"}}> Position Label </h3>
     <p className="light-gray no-margin-top">LDéfinit la direction principale d’ouverture par rapport à l’élément ciblé.</p>
-    <img src={TextAreaPosition} alt="Text Area Label Position" />
+    <img src={TextAreaPosition} alt="Exemples de position du label pour la zone de texte" />
 
     <h3 id="taille" className="h3" style={{fontFamily:"Nunito"}}> Taille </h3>
     <ul>
@@ -133,21 +133,21 @@ import "../../../../../../../.storybook/template/style/police.css";
     </ul>
 
     <h3 id="label-position" className="h3" style={{fontFamily:"Nunito"}}> Label Position </h3>
-    <img src={TextAreaLabelPosition} alt="Text Area Label Position" />
+    <img src={TextAreaLabelPosition} alt="Illustration de la position du label pour la zone de texte" />
 
     <h3 id="required-indicator" className="h3" style={{fontFamily:"Nunito"}}> Required Indicator </h3>
     <p className="light-gray no-margin-top">Permet de choisir la façon d'indiquer que le champ est obligatoire.</p>
-    <img src={TextAreaRequiredIndicator} alt="Text Area Required Indicator" />
+    <img src={TextAreaRequiredIndicator} alt="Indicateur de champ requis pour la zone de texte" />
 
     <h3 id="boolean-options" className="h3" style={{fontFamily:"Nunito"}}> Boolean Options </h3>
-    <img src={TextAreaBooleanOption} alt="Text Area Boolean Options" />
+    <img src={TextAreaBooleanOption} alt="Options booléennes pour la zone de texte" />
 
     <h3 id="precisions" className="h3" style={{fontFamily:"Nunito"}}> Précisions : différence readOnly / disabled </h3>
-    <img src={TextAreaPrecisions} alt="Text Area Précisions" />
+    <img src={TextAreaPrecisions} alt="Précisions et conseils pour la saisie dans la zone de texte" />
 
     <h3 id="structure" className="h3" style={{fontFamily:"Nunito"}}> Structure </h3>
     <p> Le <b>Textarea</b> est composé de plusieurs éléments : </p>
-    <img src={TextAreaStructure} alt="Text Area Structure" />
+    <img src={TextAreaStructure} alt="Schéma de la structure du composant zone de texte" />
     <ol>
         <li><b>Un container</b></li>
         <li>Un <b>label + required</b> (optional)</li>
@@ -157,11 +157,11 @@ import "../../../../../../../.storybook/template/style/police.css";
     </ol>
 
     <h3 id="text-options" className="h3" style={{fontFamily:"Nunito"}}> Text Options </h3>
-    <img src={TextAreaTextOptions} alt="Text Area Text Options" />
+    <img src={TextAreaTextOptions} alt="Options de texte pour le contenu de la zone de texte" />
 
     <h3 id="table-of-options" className="h3" style={{fontFamily:"Nunito"}}> Table of Options </h3>
     <p className="light-gray no-margin-top">Tous les éléments modifiables sont inscrit dans le tableau. On y renseigne le nom de la propriété et les choix qui s’offrent aux développeurs.</p>
-    <img src={TextAreaTableOfOptions} alt="Text Area Table of Options" />
+    <img src={TextAreaTableOfOptions} alt="Tableau des propriétés et options de la zone de texte" />
 
     <h2 id="Behaviors" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Behaviors </h2>
 
@@ -173,7 +173,7 @@ import "../../../../../../../.storybook/template/style/police.css";
         </ul>
 
         <h3 id="layout" className="h3" style={{fontFamily:"Nunito"}}> Layout </h3>
-        <img src={TextAreaLayout} alt="TextArea Layout" />
+    <img src={TextAreaLayout} alt="Exemple de disposition et positionnement de la zone de texte" />
 
         <h3 id="animations" className="h3" style={{fontFamily:"Nunito"}}> Animations </h3>
         <p className="no-margin-top no-margin-bottom"> Erreur </p>
@@ -182,7 +182,7 @@ import "../../../../../../../.storybook/template/style/police.css";
         <p className="light-gray no-margin-top no-margin-bottom"> <b>Modifiable</b> : Oui </p>
 
         <h3 id="keyboard-interactions" className="h3" style={{fontFamily:"Nunito"}}> Keyboard Interactions </h3>
-        <img src={TextAreaKeyboardInteractions} alt="Text Area Keyboard Interactions" />
+    <img src={TextAreaKeyboardInteractions} alt="Illustration des interactions clavier pour la zone de texte" />
 
         <h3 id="placement" className="h3" style={{fontFamily:"Nunito"}}> Placement </h3>
         <ul>
@@ -197,7 +197,7 @@ import "../../../../../../../.storybook/template/style/police.css";
 
 <h2 className="h2" id="accessibility-testing-status" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}}> Accessibility Testing Status </h2>
 <p> Voici les tests à effectuer pour vérifier l’accessibilité de chaque catégorie : </p>
-<img src={TextAreaAccessibility} alt="Accessibility" />
+<img src={TextAreaAccessibility} alt="Checklist des tests d’accessibilité pour la zone de texte" />
 
 </div>
 
