--- a/packages/react/src/components/chip/stories/Chip.mdx
+++ b/packages/react/src/components/chip/stories/Chip.mdx
@@ -108,18 +108,18 @@ import ChipsAccessibility from "../../../../../core/components/chip/stories/img/
         → Ils n’incluent pas les “Behaviors” qui correspondent à comment le composant réagit.</p>
 
         <h3 id="chips-types" className="h3" style={{fontFamily:"Nunito"}}> Chips Types </h3>
-        <img src={ChipsTypes} alt="Chips Types" />
+    <img src={ChipsTypes} alt="Exemples des différents types de chips disponibles" />
 
         <h3 id="interaction-states" className="h3" style={{fontFamily:"Nunito"}}> Interaction States </h3>
-        <img src={ChipsInteractionsStates} alt="Chips Interaction States" />
+    <img src={ChipsInteractionsStates} alt="Illustration des différents états d'interaction des chips" />
 
         <h3 id="taille" className="h3" style={{fontFamily:"Nunito"}}> Taille : </h3>
         <p> Le Chip existe en deux tailles : </p>
-        <img src={ChipsTaille} alt="Chips Taille" />
+    <img src={ChipsTaille} alt="Illustration des différentes tailles de chip" />
 
         <h3 id="structure" className="h3" style={{fontFamily:"Nunito"}}> Structure </h3>
         <p> Le <b>chip</b> est composé de plusieurs éléments : </p>
-        <img src={ChipsStructure} alt="Chips Structure" />
+    <img src={ChipsStructure} alt="Schéma de la structure du composant chip" />
         <ol>
             <li>Un <b>champ de saisie (container)</b></li>
             <li>Une <b>icône</b></li>
@@ -141,7 +141,7 @@ import ChipsAccessibility from "../../../../../core/components/chip/stories/img/
 
         <h3 id="table-of-options" className="h3" style={{fontFamily:"Nunito"}}> Table of Options </h3>
         <p className="light-gray"> Tous les éléments modifiables sont inscrit dans le tableau. On y renseigne le nom de la propriété et les choix qui s’offrent aux développeurs.</p>
-        <img src={ChipsTableOfOptions} alt="Table of Options" />
+    <img src={ChipsTableOfOptions} alt="Tableau des propriétés et options du chip" />
 
         <h2 id="Behaviors" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Behaviors </h2>
 
@@ -154,7 +154,7 @@ import ChipsAccessibility from "../../../../../core/components/chip/stories/img/
         </ul>
 
         <h3 id="layout" className="h3" style={{fontFamily:"Nunito"}}> Layout </h3>
-        <img src={ChipsLayout} alt="Chips Layout" />
+    <img src={ChipsLayout} alt="Exemple de disposition et positionnement des chips" />
 
         <h3 id="animations" className="h3" style={{fontFamily:"Nunito"}}> Animations </h3>
         <p className="no-margin-bottom"><b>Selection</b></p>
@@ -185,7 +185,7 @@ import ChipsAccessibility from "../../../../../core/components/chip/stories/img/
         <p className="light-gray no-margin-top"> Fond et texte grisés, curseur not-allowed </p>
 
         <h3 id="keyboard-interactions" className="h3" style={{fontFamily:"Nunito"}}> Keyboard Interactions </h3>
-        <img src={ChipsKeyboardInteractions} alt="Chips Keyboard Interactions" />
+    <img src={ChipsKeyboardInteractions} alt="Illustration des interactions clavier pour les chips" />
 
         <h3 id="safezone" className="h3" style={{fontFamily:"Nunito"}}> Safezone </h3>
         <ul>
@@ -207,7 +207,7 @@ import ChipsAccessibility from "../../../../../core/components/chip/stories/img/
 
         <h2 id="accessibilityTestingStatus" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Accessibility Testing Status </h2>
         <p>Voici les tests à effectuer pour vérifier l’accessibilité de chaque catégorie :</p>
-        <img src={ChipsAccessibility} alt="Chips Accessibility" />
+    <img src={ChipsAccessibility} alt="Checklist des tests d’accessibilité pour le chip" />
 
 </div>
 
