--- a/packages/angular/projects/ds-rte-lib/src/lib/components/badge/stories/badge.mdx
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/badge/stories/badge.mdx
@@ -95,27 +95,27 @@ import "../../../../../../../.storybook/template/style/police.css";
 
         <h3 id="badge-types" className="h3" style={{fontFamily:"Nunito"}}> Badge Types </h3>
 
-        <img src={BadgeTypes} alt="Badge Types" />
+        <img src={BadgeTypes} alt="Exemples des différents types de badges disponibles" />
 
         <h3 id="taille" className="h3" style={{fontFamily:"Nunito"}}> Taille </h3>
 
         <p> Le badge existe en quatre tailles </p>
 
-        <img src={Taille} alt="Taille" />
+        <img src={Taille} alt="Illustration des quatre tailles de badge" />
 
         <h3 id="text-options" className="h3" style={{fontFamily:"Nunito"}}> Text Options </h3>
 
-        <img src={TextOptions} alt="Text Options" />
+        <img src={TextOptions} alt="Options de texte pour le contenu du badge" />
 
         <h3 id="other-components" className="h3" style={{fontFamily:"Nunito"}}> Other Components </h3>
 
-        <img src={OtherComponent} alt="Other Components" />
+        <img src={OtherComponent} alt="Exemples d'autres composants associés au badge" />
 
         <h3 id="structure" className="h3" style={{fontFamily:"Nunito"}}> Structure </h3>
 
         <p> Le <b>badge</b> est composé de plusieurs éléments </p>
 
-        <img src={StructureComposant} alt="Structure Composant" />
+        <img src={StructureComposant} alt="Schéma de la structure du composant badge" />
 
         <ol>
             <li>Un <b>champ de saisie (container)</b></li>
@@ -126,7 +126,7 @@ import "../../../../../../../.storybook/template/style/police.css";
 
         <p className="light-gray"> Tous les éléments modifiables sont inscrit dans le tableau. On y renseigne le nom de la propriété et les choix qui s’offrent aux développeurs.</p>
 
-        <img src={TableOfOptions} alt="Table of Options" />
+        <img src={TableOfOptions} alt="Tableau des propriétés et options du badge" />
 
         <h2 id="Behaviors" className="h2" style={{border:"none", fontFamily:"Nunito"}}> Behaviors </h2>
 
@@ -135,7 +135,7 @@ import "../../../../../../../.storybook/template/style/police.css";
 
         <h3 id="layout" className="h3" style={{fontFamily:"Nunito"}}> Layout </h3>
 
-        <img src={Layout} alt="Layout" />
+        <img src={Layout} alt="Exemple de disposition et positionnement du badge" />
 
         <h3 id="animations" className="h3" style={{fontFamily:"Nunito"}}> Animations </h3>
 
@@ -171,7 +171,7 @@ import "../../../../../../../.storybook/template/style/police.css";
 
         <p> Voici les tests à effectuer pour vérifier l’accessibilité de chaque catégorie : </p>
 
-        <img src={Accessibility} alt="Accessibility" />
+        <img src={Accessibility} alt="Checklist des tests d’accessibilité pour le badge" />
 
     </div>
 
