--- a/packages/react/src/components/loader/stories/Loader.mdx
+++ b/packages/react/src/components/loader/stories/Loader.mdx
@@ -92,23 +92,23 @@ import "../../../../.storybook/template/style/police.css";
     → Ils n’incluent pas les “Behaviors” qui correspondent à comment le composant réagit.</p>
 
     <h3 id="tailles" className="h3" style={{fontFamily:"Nunito"}} > Taille </h3>
-    <img src={LoaderTaille} alt="Loader Taille" />
+    <img src={LoaderTaille} alt="Illustration des différentes tailles du loader" />
 
     <h3 id="appearance" className="h3" style={{fontFamily:"Nunito"}} > Appearance </h3>
-    <img src={LoaderAppearance} alt="Loader Appearance" />
+    <img src={LoaderAppearance} alt="Exemples d'apparence visuelle du loader" />
 
     <h3 id="label-position" className="h3" style={{fontFamily:"Nunito"}}> Label Position </h3>
-    <img src={LoaderPosition} alt="Loader Position" />
+    <img src={LoaderPosition} alt="Exemples de positionnement du loader par rapport au texte" />
 
     <h3 id="boolean-options" className="h3" style={{fontFamily:"Nunito"}}> Boolean Options </h3>
-    <img src={LoaderBooleanOptions} alt="Loader Boolean Options" />
+    <img src={LoaderBooleanOptions} alt="Options booléennes disponibles pour le loader" />
 
     <h3 id="text-options" className="h3" style={{fontFamily:"Nunito"}}> Text Options </h3>
-    <img src={LoaderTextOptions} alt="Loader Text Options" />
+    <img src={LoaderTextOptions} alt="Options de texte pour le contenu du loader" />
 
     <h3 id="layout" className="h3" style={{fontFamily:"Nunito"}}> Layout </h3>
     <p> le <b> loader / spinner </b> est composé de plusieurs éléments</p>
-    <img src={LoaderStructure} alt="Loader Structure" />
+    <img src={LoaderStructure} alt="Schéma de la structure du composant loader" />
     <ol>
         <li> Un <b> spinner / loader </b></li>
         <li> Un <b> label + required </b>(optional)</li>
@@ -116,7 +116,7 @@ import "../../../../.storybook/template/style/police.css";
 
     <h3 id="table-of-options" className="h3" style={{fontFamily:"Nunito"}}> Table of Options </h3>
     <p className="light-gray"> Tous les éléments modifiables sont inscrit dans le tableau. On y renseigne le nom de la propriété et les choix qui s’offrent aux développeurs. </p>
-    <img src={LoaderTableOfOptions} alt="Table of Options of the Loader" />
+    <img src={LoaderTableOfOptions} alt="Tableau des propriétés et options du loader" />
 
     <h2 id="Behaviors" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Behaviors </h2>
 
@@ -161,7 +161,7 @@ import "../../../../.storybook/template/style/police.css";
 
 <h2 className="h2" id="accessibility-testing-status" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}}> Accessibility Testing Status </h2>
 <p> Voici les tests à effectuer pour vérifier l’accessibilité de chaque catégorie : </p>
-<img src={LoaderAccessibility} alt="Accessibility" />
+<img src={LoaderAccessibility} alt="Checklist des tests d’accessibilité pour le loader" />
 
 </div>
 
