--- a/packages/react/src/components/tag/stories/Tag.mdx
+++ b/packages/react/src/components/tag/stories/Tag.mdx
@@ -85,19 +85,19 @@ import "../../../../.storybook/template/style/police.css";
         → Ils n’incluent pas les “Behaviors” qui correspondent à comment le composant réagit.</p>
 
         <h3 id="tag-types" className="h3" style={{fontFamily:"Nunito"}}> Tag Types </h3>
-        <img src={TagTypes} alt="Tag Types" />
+    <img src={TagTypes} alt="Exemples des différents types de tags disponibles" />
 
         <h3 id="status" className="h3" style={{fontFamily:"Nunito"}}> Status </h3>
         <p> Uniquement pour les tags avec tagType = status </p>
-        <img src={TagStatus} alt="Tag Status" />
+    <img src={TagStatus} alt="Illustration des statuts possibles pour le tag" />
 
         <h3 id="taille" className="h3" style={{fontFamily:"Nunito"}}> Taille : </h3>
         <p> Le Tag existe en deux tailles : </p>
-        <img src={TagTaille} alt="Tag Taille" />
+    <img src={TagTaille} alt="Illustration des tailles disponibles pour le tag" />
 
         <h3 id="structure" className="h3" style={{fontFamily:"Nunito"}}> Structure </h3>
         <p> Le <b>tag</b> est composé de plusieurs éléments : </p>
-        <img src={TagStructure} alt="Tag Structure" />
+    <img src={TagStructure} alt="Schéma de la structure du composant tag" />
 
         <ol>
             <li>Un <b>champ de saisie (container)</b></li>
@@ -124,7 +124,7 @@ import "../../../../.storybook/template/style/police.css";
 
         <h3 id="table-of-options" className="h3" style={{fontFamily:"Nunito"}}> Table of Options </h3>
         <p className="light-gray"> Tous les éléments modifiables sont inscrit dans le tableau. On y renseigne le nom de la propriété et les choix qui s’offrent aux développeurs.</p>
-        <img src={TagTableOfOptions} alt="Table of Options" />
+    <img src={TagTableOfOptions} alt="Tableau des propriétés et options du tag" />
 
         <h2 id="Behaviors" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Behaviors </h2>
 
@@ -132,7 +132,7 @@ import "../../../../.storybook/template/style/police.css";
         <p> ❌ Aucun focus possible (pas interactif) </p>
 
         <h3 id="layout" className="h3" style={{fontFamily:"Nunito"}}> Layout </h3>
-        <img src={TagLayout} alt="Tag Layout" />
+    <img src={TagLayout} alt="Exemple de disposition et positionnement des tags" />
 
         <h3 id="animations" className="h3" style={{fontFamily:"Nunito"}}> Animations </h3>
         <ul>
@@ -155,7 +155,7 @@ import "../../../../.storybook/template/style/police.css";
 
 <h2 className="h2" id="accessibility-testing-status" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}}> Accessibility Testing Status </h2>
 <p> Voici les tests à effectuer pour vérifier l’accessibilité de chaque catégorie : </p>
-<img src={TagAccessibility} alt="Accessibility" />
+<img src={TagAccessibility} alt="Checklist des tests d’accessibilité pour le tag" />
 
 </div>
 
