--- a/packages/react/src/components/badge/stories/Badge.mdx
+++ b/packages/react/src/components/badge/stories/Badge.mdx
@@ -14,6 +14,8 @@ import TableOfOptions from "../../../../../core/components/badge/stories/img/Tab
 import Layout from "../../../../../core/components/badge/stories/img/Layout.svg"
 import Accessibility from "../../../../../core/components/badge/stories/img/Accessibility.png"
 
+import { TabOfOptions } from "./TabOfOptions";
+
 import "../../../../.storybook/template/style/police.css";
 
 <Meta title="Composants/Badge" />
@@ -127,7 +129,7 @@ import "../../../../.storybook/template/style/police.css";
 
         <p className="light-gray"> Tous les éléments modifiables sont inscrit dans le tableau. On y renseigne le nom de la propriété et les choix qui s’offrent aux développeurs.</p>
 
-    <img src={TableOfOptions} alt="Tableau des propriétés et options du badge" />
+    <TabOfOptions/>
 
         <h2 id="Behaviors" className="h2" style={{border:"none", fontFamily:"Nunito"}}> Behaviors </h2>
 
