feat (design docs): add guideline page

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/badge/stories/badge.mdx
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/badge/stories/badge.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/blocks";
 
-import StorybookTabs from "../../../../../../../.storybook/template/StorybookTabs";
+import Tabs from "../../../../../../../../design-docs/src/components/ComponentDocs/Tabs/Tabs";
 import HeaderComponent from "../../../../../../../.storybook/template/HeaderComponent/HeaderComponent";
 import IconTitle from "../../../../../../../.storybook/template/IconTitle/IconTitle";
 
@@ -27,7 +27,7 @@ import { TabOfOptions } from "./TabOfOptions";
 
 
 
-<StorybookTabs>
+<Tabs>
 
     <div className="Overview">
 
@@ -177,4 +177,4 @@ import { TabOfOptions } from "./TabOfOptions";
 
     </div>
 
-</StorybookTabs>
+</Tabs>
