--- a/packages/react/src/components/badge/stories/Badge.mdx
+++ b/packages/react/src/components/badge/stories/Badge.mdx
@@ -1,7 +1,7 @@
 import { Meta } from "@storybook/blocks";
 import React from "react";
 
-import StorybookTabs from "../../../../.storybook/template/StorybookTabs";
+import Tabs from "../../../../../design-docs/src/components/ComponentDocs/Tabs/Tabs";
 import HeaderComponent from "../../../../.storybook/template/HeaderComponent/HeaderComponent";
 import IconTitle from "../../../../.storybook/template/IconTitle/IconTitle";
 
@@ -28,7 +28,7 @@ import "../../../../.storybook/template/style/police.css";
 
 
 
-<StorybookTabs>
+<Tabs>
 
     <div className="Overview">
 
@@ -178,4 +178,4 @@ import "../../../../.storybook/template/style/police.css";
 
     </div>
 
-</StorybookTabs>
+</Tabs>
