--- a/packages/react/src/components/breadcrumbs/stories/Breadcrumbs.mdx
+++ b/packages/react/src/components/breadcrumbs/stories/Breadcrumbs.mdx
@@ -1,51 +1,102 @@
 import { Meta } from "@storybook/blocks";
 import React from "react";
 
-import StorybookTabs from "../../../../.storybook/template/StorybookTabs";
-import HeaderComponent from "../../../../.storybook/template/HeaderComponent/HeaderComponent";
-import "../../../../.storybook/template/style/police.css";
-
-import Heading from "../../../../.storybook/template/heading/Heading";
-import Availability from "../../../../.storybook/template/Overview/Availability/Availability";
-import LastUpdate from "../../../../.storybook/template/Overview/LastUpdate/LastUpdate";
-import {TabOfOptions} from "./TabOfOptions";
-
-import Icon from "../../icon/Icon";
+import ComponentDocs from "../../../../../design-docs/src/components/ComponentDocs/ComponentDocs";
+import DocsSection from "../../../../../design-docs/src/components/DocsSection/DocsSection";
+import Accordion from "../../../../../design-docs/src/components/Accordion/Accordion";
+import Gerkin from "../../../../.storybook/template/Guideline/Gerkin/Gerkin";
+import Paragraph from "../../../../../design-docs/src/components/Paragraph/Paragraph";
+import Usage from "./Usage";
+import Options from "./Options";
+import Behaviors from "./Behaviors";
+import AccessibilityTable from "./AccessibilityTable";
 
 <Meta title="Composants/Breadcrumbs" />
 
-<HeaderComponent title="Breadcrumbs" linkFigma="https://www.figma.com/design/Wiy8uWsWjoagf95lOmPXNU/01.0-Design-System-RTE---WEB?node-id=2620-7306&p=f&m=dev" linkGithub="https://github.com/rte-france/design-system-rte/tree/main/packages/react/src/components/breadcrumbs"  />
-
-<p>Le composant <b>Breadcrumb</b> (ou fil d’Ariane) permet d’indiquer visuellement le chemin de navigation jusqu’à la page en cours. Il facilite la compréhension de la hiérarchie de l’interface et offre un accès rapide aux pages parentes. Il se base sur le composant Link pour tous les comportements de navigation, de focus et d’accessibilité.</p>
-
-<StorybookTabs>
-
-<div className="Overview">
-    <div style={{display: 'flex', gap: '16px', padding: '16px'}}>
-        <div style={{flex: '1 1 0', display: 'flex', gap: '8px', flexDirection: 'column'}}>
-            <Heading level={2} id="Introduction">Disponibilité</Heading>
-            <Availability/>
-        </div>
-        <div style={{flex: '2 1 0', display: 'flex', gap: '8px', flexDirection: 'column'}}>
-            <Heading level={2}>Dernières mises à jour</Heading>
-            <LastUpdate updates={[
-                {version: '1.0.0', date: '04 Décembre 2025', changes: ['Livraison du composant']}
-            ]}/>
-        </div>
-    </div>
-    <div style={{display: 'flex', gap: '16px', flexDirection: 'column', padding: '16px'}}>
-        <Heading level={2}>Options</Heading>
-        <TabOfOptions />
-    </div>
-</div>
-
-<div className="Guidelines">
-
-        
-</div>
-
-<div className="Accessibilité">
-
-</div>
-
-</StorybookTabs>
+<ComponentDocs
+  title="Breadcrumbs"
+  description={
+    <Paragraph>Le composant <b>Breadcrumb</b> (ou fil d'Ariane) permet d'indiquer visuellement le chemin de navigation jusqu'à la page en cours. Il facilite la compréhension de la hiérarchie de l'interface et offre un accès rapide aux pages parentes. Il se base sur le composant Link pour tous les comportements de navigation, de focus et d'accessibilité.</Paragraph>
+  }
+  linkFigma="https://www.figma.com/design/Wiy8uWsWjoagf95lOmPXNU/01.0-Design-System-RTE---WEB?node-id=2620-7306&p=f&m=dev"
+  linkGithub="https://github.com/rte-france/design-system-rte/tree/main/packages/react/src/components/breadcrumbs"
+  disponibility={{
+    design: {
+      figma: true,
+      guidelines: true,
+    },
+    code: {
+      react: true,
+      angular: true,
+    },
+  }}
+  changelog={[
+    {
+      version: "1.0.0",
+      date: "04 Décembre 2025",
+      changes: ["Livraison du composant"],
+    },
+  ]}
+  options={[
+    {
+      property: "numberOfPages",
+      value: "1 / 2 / 3 / 3+",
+      defaultValue: "2",
+      dependance: "-",
+    },
+    {
+      property: "activePageLabel",
+      value: "Text",
+      defaultValue: "Active page",
+      dependance: "-",
+    },
+    {
+      property: "showBadge",
+      value: "True / False",
+      defaultValue: "False",
+      dependance: "-",
+    },
+    {
+      property: "mode",
+      value: "bleu-iceberg_light / bleu-iceberg_dark / violet_light / violet_dark / vert-foret_light / vert-foret_dark",
+      defaultValue: "bleu-iceberg_light",
+      dependance: "-",
+    },
+  ]}
+  guidelines={
+    <>
+      <DocsSection>
+        <p>
+          <i>Composant générique pouvant être utilisé par toutes les équipes de la DSIT.</i>
+        </p>
+        <Gerkin>
+          <ul>
+            <li>
+              En tant qu'utilisateur <b>naviguant sur une interface</b>,
+            </li>
+            <li>
+              Je souhaite <b>visualiser clairement ma position dans l'arborescence du site ou de l'application</b>,
+            </li>
+            <li>
+              Afin de <b>comprendre le contexte de la page actuelle et revenir facilement à un niveau supérieur si besoin</b>.
+            </li>
+          </ul>
+        </Gerkin>
+      </DocsSection>
+      <DocsSection>
+        <Usage />
+      </DocsSection>
+      <DocsSection>
+        <Options />
+      </DocsSection>
+      <DocsSection>
+        <Behaviors />
+      </DocsSection>
+    </>
+  }
+  accessibility={
+    <Accordion title="Accessibility Testing Status">
+      <AccessibilityTable />
+    </Accordion>
+  }
+/>
